# js8call

./: .gitignore  APRSISClient.cpp  APRSISClient.h  AudioDecoder.cpp  AudioDecoder.h  Bands.cpp  Bands.hpp  CMakeCPackOptions.cmake.in  CMakeLists.txt  CallsignValidator.cpp  Configuration.cpp  Configuration.hpp  Configuration.ui  DXLabSuiteCommanderTransceiver.cpp  Decoder.cpp  Decoder.h  Detector.cpp  Detector.hpp  DriftingDateTime.cpp  DriftingDateTime.h  FrequencyList.cpp  HamlibTransceiver.cpp  HamlibTransceiver.hpp  INSTALL  INSTALL-WSJTX  Inbox.cpp  Inbox.h  MaidenheadLocatorValidator.hpp  Message.cpp  Message.h  MessageClient.cpp  MessageClient.hpp  MessageServer.cpp  MessageServer.h  MessageServer.hpp  Modes.cpp  Modes.hpp  Modulator.cpp  NotificationAudio.cpp  NotificationAudio.h  (+89 more)
.svn/tmp/: svn-dQAN3G
Darwin/: Info.plist.in  Mac-ft8call-startup.sh  Mac-js8call-startup.sh  ReadMe.txt
UDPExamples/: udp_daemon.rc
artwork/: make_graphics.sh
lib/: constants.f90  decoder.f90  extract.f90  extractmessage144.f90  ft8_decode.f90  ft8_decode.mod  genqra64.f90  js8a_decode.f90  js8a_module.f90  js8b_decode.f90  js8b_module.f90  js8c_decode.f90  js8c_module.f90  js8d_decode.f90  js8d_module.f90  js8e_decode.f90  js8e_module.f90  js8i_decode.f90  js8i_module.f90  jt9.f90  jt9a.f90  jt9com.f90  ldpcsim40.f90  msk40decodeframe.f90  packjt.f90  qra64code.f90  symspec.f90  sync64.f90  timf2.f90
lib/ft8/: baseline.f90  bpdecode174.f90  chkcrc12a.f90  extractmessage174.f90  foxfilt.f90  foxgen.f90  ft8_downsample.f90  ft8_params.f90  ft8apset.f90  ft8b.f90  ft8code.f90  genft8.f90  genft8refsig.f90  ldpcsim174.f90  osd174.f90  subtractft8.f90  sync8.f90  sync8d.f90
lib/js8/: baselinejs8.f90  genjs8.f90  genjs8refsig.f90  js8_downsample.f90  js8_params.f90  js8a_params.f90  js8b_params.f90  js8c_params.f90  js8d_params.f90  js8dec.f90  js8e_params.f90  js8i_params.f90  ldpcsim174js8a.f90  ldpcsim174js8b.f90  ldpcsim174js8c.f90  ldpcsim174js8d.f90  ldpcsim174js8e.f90  ldpcsim174js8i.f90  subtractjs8.f90  syncjs8.f90  syncjs8d.f90
lib/js8/costas/: Costas_essense_N=7.txt  Costas_symmetrical_N=7.txt  Sorted_Costas_arrays_N=7.txt
logbook/: adif.cpp  adif.h  logbook.cpp  logbook.h  n3fjp.h
media/tests/: README  test
